--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ img:hover {
     cursor: pointer;
 }
 
+legend {
+    text-align: center;
+}
+
 .selected-title {
     text-decoration: underline;
     font-weight: bolder;
@@ -54,6 +58,41 @@ li:hover {
 .gender-options {
     display: flex;
     justify-content: space-between;
+}
+
+footer, header {
+    border-style: solid;
+    border-width: 1px;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
+a:active {
+    color: red;
+}
+
+.close-icon {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+}
+
+#cookies-banner {
+    position: fixed;
+    top: 90%;
+    left: 20%;
+    width: 60%;
+    height: 2rem;
+    background: red;
+    color: white;
+    z-index: 9999;
+    padding: 10px;
 }
 
 /* Desktop */
@@ -104,6 +143,7 @@ li:hover {
     }
 
     .navigation-list > li {
+        letter-spacing: normal;
         font-weight: bold;
         font-size: x-large;
     }
@@ -154,6 +194,9 @@ li:hover {
     .article-text {
         width: 50%;
         font-size: 24px;
+        line-height: normal;
+        text-indent: 1rem;
+        word-spacing: normal;
     }
 
     .image-text-centered-bottom {
@@ -212,6 +255,7 @@ li:hover {
         background: linear-gradient(180deg, #D7FFAB 0%, #D7FFAB 100%);
         background-origin: border-box;
         user-select: none;
+        text-transform: uppercase;
     }
 
     .view-button:hover {
