--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,6 @@ li:hover {
 }
 
 footer, header {
-    border-style: solid;
     border-width: 1px;
 }
 
@@ -233,7 +232,8 @@ a:active {
         height: 90%;
         margin-left: 1rem;
         object-fit: cover;
-        border: 1px solid black;
+        border-width: 1px;
+        border-style: solid;
     }
 
     .article-preview-picture:hover {
