--- a/css/styles.css
+++ b/css/styles.css
@@ -485,6 +485,8 @@ a:active {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        border-bottom: 1px solid black;
+        margin-bottom: 20px;
     }
 
     .drawer-navigation {
@@ -507,6 +509,8 @@ a:active {
         text-align: center;
         font-size: 20px;
         font-weight: bold;
+        border-top: 1px solid black;
+        padding-top: 10px;
     }
 
     #overlay {
