--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 .contact-details {
     margin-right: 12px;
 }
@@ -32,6 +33,7 @@ legend {
 
 .copyright {
     margin-left: 20px;
+    float: left;
 }
 
 .drawer-closed {
@@ -96,6 +98,28 @@ a:active {
     padding: 10px;
 }
 
+#cookies-banner::first-letter {
+    color: black;
+}
+
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+tr:nth-child(odd) {
+    background: #FFF;
+}
+
+tr:nth-child(even) {
+    background: #CFF;
+}
+
 /* Desktop */
 @media only screen and (min-width: 769px) {
     body {
@@ -104,7 +128,6 @@ a:active {
         min-height: 100vh;
         margin: 0;
         max-width: 100vw;
-
     }
 
     footer {
@@ -177,10 +200,12 @@ a:active {
 
     .home-picture-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         width: 100%;
         height: 60vh;
         box-sizing: border-box;
+        margin-top: 0;
     }
 
     .image-text-centered {
@@ -224,7 +249,9 @@ a:active {
         background: #FFCA9C;
         gap: 1rem;
         width: 40vw;
-        border: 1px solid black;
+        border-color: black;
+        border-style: solid;
+        border-width: 1px;
     }
 
     .article-preview-picture {
@@ -543,10 +570,12 @@ a:active {
 
     .home-picture-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         width: 100%;
-        height: 90vh;
+        height: 91vh;
         box-sizing: border-box;
+        margin-top: 0;
     }
 
     .image-text-centered {
@@ -572,7 +601,7 @@ a:active {
     .articles-grid {
         display: flex;
         flex-direction: column;
-        gap: 5rem;
+        gap: 5em;
         margin-bottom: 40px;
     }
 
